--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
     />
-    <title>Movie List</title>
+
+    <title>Christian McFarland</title>
   </head>
   <body>
     <noscript>
